# sixaxispairer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
CMakeModules/: FindHIDAPI.cmake
